# quest-

./: .gitignore  AGENTS.md  Cargo.toml  health-potions-actions.md  portals-town.md
.agent/skills/code-standards/: SKILL.md
.agent/skills/finishing-a-development-branch/: SKILL.md
.agent/skills/starting-a-new-random-issue/: SKILL.md
.agent/skills/using-git-worktrees/: SKILL.md
.agent/tasks/: mobs-auto-attack.md
.cargo/: config.toml
quest-core/: Cargo.toml
quest-core/data/: areas.json  equipment.json  fruits.json  item_spawn_tables.json  items.json  mob_spawn_tables.json  mobs.json
quest-core/src/: action.rs  area.rs  equipment.rs  fruit.rs  game_state.rs  item.rs  item_spawn_table.rs  lib.rs  mob.rs  mob_spawn_table.rs  player.rs  rng.rs
quest-web/: Cargo.toml  index.html  styles.css
quest-web/src/: app.rs  main.rs  storage.rs
quest-web/src/components/: health_bar.rs  mod.rs
quest-web/src/screens/: area.rs  character_sheet.rs  equipment_scene.rs  fruit_scene.rs  inventory.rs  main_menu.rs  mod.rs  town.rs
