[package]
name = "quest-web"
version = "0.1.0"
edition = "2021"

[dependencies]
quest-core = { path = "../quest-core" }
yew = { version = "0.21", features = ["csr"] }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
gloo-storage = "0.3"
gloo-timers = "0.3"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
wasm-logger = "0.2"
